--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h4>FRONTEND DEVELOPER</h4>
             <H1>Hi, I'm <span>Stephanie</span></H1>
             <p>
-                I'm Stephanie, 20, passionate about computers since childhood. Studying Software Engineering, currently starting into C#. Committed to leveraging my skills to craft software solutions.
+                Passionate about computers since childhood and working as a QA at CodeLeap. I'm studying Software Engineering and currently studying React Native.
             </p>
         </div>
         
