--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="content">
             <span class="blur"></span>
             <span class="blur"></span>
-            <h4>FRONTEND DEVELOPER</h4>
+            <h4>QUALITY ASSURANCE</h4>
             <H1>Hi, I'm <span>Stephanie</span></H1>
             <p>
                 Passionate about computers since childhood and working as a QA at CodeLeap. I'm studying Software Engineering and currently studying React Native.
