--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="#">About</a></li>
-            <li id="link1" class="link"><a href="#">Projects</a></li>
-            <li id="link2" class="link"><a href="#">Contact</a></li>
+            <li id="link" class="link"><a href="#about">About</a></li>
+            <li id="link1" class="link"><a href="#projects">Projects</a></li>
+            <li id="link2" class="link"><a href="#contact">Contact</a></li>
         </ul>
-        
     
     </nav>
     <header class="container">
@@ -43,50 +42,50 @@
         </div>
     </header>
 
-    <div class="portfolio" id="portfolio">
+    <div class="portfolio" id="projects">
         <div class="header">
             <div class="info">
-                <h5>Recent Projects</h5>
-                <h3>My Portfolio</h3>
+                <h5>Skills Overview</h5>
+                <h3>My Skills</h3>
             </div>
         </div>
 
         <div class="portfo-items">
             <div class="item">
-                <img src="images/gojo.png">
+                <img src="images/testing.png">
                 <div class="info">
-                    <h4>Project 1</h4>
+                    <h4>Quality Assurance</h4>
                     <p>
-                        EM CONSTRUCAO.
+                        I work to ensure software is reliable, functional, and performs as expected. My focus is on spotting potential issues early, improving processes, and delivering quality products that meet user expectations. I believe QA is not just about finding bugs but about creating a better overall experience.
                     </p>
-                    <a href="#">Live View <i class='bx bx-link-external'></i></a>
+                    <!-- <a href="#">Live View <i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
             <div class="item">
-                <img src="images/gojo.png">
+                <img src="images/testing.png">
                 <div class="info">
-                    <h4>Project 2</h4>
+                    <h4>Manual Testing</h4>
                     <p>
-                        EM CONSTRUCAO.
+                        I specialize in manual testing to ensure every part of the software works as it should. By testing features and workflows from a user’s perspective, I can catch issues that automated tools might miss. It’s all about making sure the product feels intuitive and works smoothly for its users.
                     </p>
-                    <a href="#">Live View <i class='bx bx-link-external'></i></a>
+                    <!-- <a href="#">Live View <i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
             <div class="item">
-                <img src="images/gojo.png">
+                <img src="images/testing.png">
                 <div class="info">
-                    <h4>Project 3</h4>
+                    <h4>Automated Testing</h4>
                     <p>
-                        EM CONSTRUCAO.
+                        I use tools like Robot Framework and Selenium to make the testing process faster and more efficient. By automating repetitive tasks, I help save time and improve accuracy. I focus on creating flexible and reliable tests that can adapt to the project’s needs and ensure everything runs as expected.
                     </p>
-                    <a href="#">Live View <i class='bx bx-link-external'></i></a>
+                    <!-- <a href="#">Live View <i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
         </div>
 
     </div>
 
-    <footer class="container">
+    <footer class="container" id="contact">
         <div class="column">
             <div class="logo">
                 <img src="images/S.png">
