--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <img src="images/S.png">
             </a>
         </div>
-
+        <div class="menu-toggle">
+            <div class="hamburger"></div>
+        </div>
         <ul class="nav-links">
             <li id="link" class="link"><a href="#about">About</a></li>
             <li id="link1" class="link"><a href="#projects">Projects</a></li>
